feat(search): allow search articles by author
- create search route
- create search controller
- write test

finishes: 163405801
